# src/application/persona/persona.dto.ts
@@ -1,0 +1,17 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+export class PersonaDto {
+  @IsNotEmpty()
+  nroDocumento: string;
+
+  @IsNotEmpty()
+  nombres: string;
+
+  @IsString()
+  primerApellido: string;
+
+  @IsString()
+  segundoApellido: string;
+
+  @IsString()
+  fechaNacimiento: Date;
+}
